Correct vertical align of menu toggle (#313)
This moves the toggle button content into the middle of the
navigation bar. The hidden links offset for absolute positiioning
has been updated to reflect the visual vertical change

Thanks!

--- a/docs/_sass/minimal-mistakes/_utilities.scss
+++ b/docs/_sass/minimal-mistakes/_utilities.scss
@@ -229,7 +229,7 @@ body:hover .visually-hidden button {
    ========================================================================== */
 
 .navicon {
-  display: inline-block;
+  display: block;
   position: relative;
   width: $navicon-width;
   height: $navicon-height;
